--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1045,7 +1045,7 @@ a {
 .cid-tdm6lh0pdz {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #004a86;
+  background-color: #092d6b;
 }
 @media (min-width: 992px) {
   .cid-tdm6lh0pdz .carousel {
@@ -1661,7 +1661,7 @@ a {
 .cid-tdmplaCsPO {
   padding-top: 3rem;
   padding-bottom: 1rem;
-  background-color: #600b4a;
+  background-color: #e43f3f;
 }
 .cid-tdmplaCsPO .mbr-fallback-image.disabled {
   display: none;
@@ -1932,7 +1932,7 @@ a {
 .cid-tdmkg2XOwt {
   padding-top: 3rem;
   padding-bottom: 1rem;
-  background-color: #d24c1c;
+  background-color: #40b0bf;
 }
 .cid-tdmkg2XOwt .mbr-fallback-image.disabled {
   display: none;
@@ -2203,7 +2203,7 @@ a {
 .cid-tdmerf4UZB {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-color: #131846;
+  background-color: #092d6b;
 }
 .cid-tdmerf4UZB .mbr-fallback-image.disabled {
   display: none;
@@ -2469,819 +2469,6 @@ a {
   text-align: center;
 }
 .cid-tdmerf4UZB H3 {
-  color: #ffffff;
-}
-.cid-tdmfPvieFs {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #131846;
-}
-.cid-tdmfPvieFs .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tdmfPvieFs .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tdmfPvieFs .item {
-  padding-bottom: 2rem;
-}
-.cid-tdmfPvieFs .item-wrapper {
-  height: 100%;
-  position: relative;
-}
-.cid-tdmfPvieFs .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tdmfPvieFs .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-tdmfPvieFs .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tdmfPvieFs .carousel-control,
-.cid-tdmfPvieFs .close {
-  background: #1b1b1b;
-}
-.cid-tdmfPvieFs .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tdmfPvieFs .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tdmfPvieFs .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tdmfPvieFs .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tdmfPvieFs .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tdmfPvieFs .close::before {
-  content: '\e91a';
-}
-.cid-tdmfPvieFs .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tdmfPvieFs .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tdmfPvieFs .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmfPvieFs .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tdmfPvieFs .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tdmfPvieFs .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tdmfPvieFs .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tdmfPvieFs .carousel-indicators li.active,
-.cid-tdmfPvieFs .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tdmfPvieFs .carousel-indicators li::after,
-.cid-tdmfPvieFs .carousel-indicators li::before {
-  content: none;
-}
-.cid-tdmfPvieFs .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tdmfPvieFs .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tdmfPvieFs .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmfPvieFs .carousel-indicators {
-    display: none;
-  }
-}
-.cid-tdmfPvieFs .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tdmfPvieFs .carousel-inner > .active {
-  display: block;
-}
-.cid-tdmfPvieFs .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmfPvieFs .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tdmfPvieFs .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tdmfPvieFs .carousel-control,
-  .cid-tdmfPvieFs .carousel-indicators,
-  .cid-tdmfPvieFs .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmfPvieFs .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tdmfPvieFs .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tdmfPvieFs .carousel-indicators .active,
-.cid-tdmfPvieFs .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tdmfPvieFs .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tdmfPvieFs .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tdmfPvieFs .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-tdmfPvieFs .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tdmfPvieFs .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tdmfPvieFs .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tdmfPvieFs .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tdmfPvieFs .carousel {
-  width: 100%;
-}
-.cid-tdmfPvieFs .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tdmfPvieFs .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tdmfPvieFs .modal.fade .modal-dialog,
-.cid-tdmfPvieFs .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tdmfPvieFs .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tdmfPvieFs H6 {
-  text-align: center;
-}
-.cid-tdmfPvieFs H3 {
-  color: #ffffff;
-}
-.cid-tdmgci6B7v {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #131846;
-}
-.cid-tdmgci6B7v .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tdmgci6B7v .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tdmgci6B7v .item {
-  padding-bottom: 2rem;
-}
-.cid-tdmgci6B7v .item-wrapper {
-  height: 100%;
-  position: relative;
-}
-.cid-tdmgci6B7v .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tdmgci6B7v .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-tdmgci6B7v .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tdmgci6B7v .carousel-control,
-.cid-tdmgci6B7v .close {
-  background: #1b1b1b;
-}
-.cid-tdmgci6B7v .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tdmgci6B7v .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tdmgci6B7v .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tdmgci6B7v .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tdmgci6B7v .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tdmgci6B7v .close::before {
-  content: '\e91a';
-}
-.cid-tdmgci6B7v .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tdmgci6B7v .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tdmgci6B7v .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmgci6B7v .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tdmgci6B7v .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tdmgci6B7v .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tdmgci6B7v .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tdmgci6B7v .carousel-indicators li.active,
-.cid-tdmgci6B7v .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tdmgci6B7v .carousel-indicators li::after,
-.cid-tdmgci6B7v .carousel-indicators li::before {
-  content: none;
-}
-.cid-tdmgci6B7v .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tdmgci6B7v .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tdmgci6B7v .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmgci6B7v .carousel-indicators {
-    display: none;
-  }
-}
-.cid-tdmgci6B7v .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tdmgci6B7v .carousel-inner > .active {
-  display: block;
-}
-.cid-tdmgci6B7v .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmgci6B7v .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tdmgci6B7v .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tdmgci6B7v .carousel-control,
-  .cid-tdmgci6B7v .carousel-indicators,
-  .cid-tdmgci6B7v .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmgci6B7v .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tdmgci6B7v .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tdmgci6B7v .carousel-indicators .active,
-.cid-tdmgci6B7v .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tdmgci6B7v .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tdmgci6B7v .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tdmgci6B7v .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-tdmgci6B7v .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tdmgci6B7v .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tdmgci6B7v .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tdmgci6B7v .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tdmgci6B7v .carousel {
-  width: 100%;
-}
-.cid-tdmgci6B7v .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tdmgci6B7v .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tdmgci6B7v .modal.fade .modal-dialog,
-.cid-tdmgci6B7v .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tdmgci6B7v .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tdmgci6B7v H6 {
-  text-align: center;
-}
-.cid-tdmgci6B7v H3 {
-  color: #ffffff;
-}
-.cid-tdmgyyJA5J {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #131846;
-}
-.cid-tdmgyyJA5J .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tdmgyyJA5J .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tdmgyyJA5J .item {
-  padding-bottom: 2rem;
-}
-.cid-tdmgyyJA5J .item-wrapper {
-  height: 100%;
-  position: relative;
-}
-.cid-tdmgyyJA5J .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tdmgyyJA5J .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-tdmgyyJA5J .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tdmgyyJA5J .carousel-control,
-.cid-tdmgyyJA5J .close {
-  background: #1b1b1b;
-}
-.cid-tdmgyyJA5J .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tdmgyyJA5J .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tdmgyyJA5J .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tdmgyyJA5J .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tdmgyyJA5J .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tdmgyyJA5J .close::before {
-  content: '\e91a';
-}
-.cid-tdmgyyJA5J .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tdmgyyJA5J .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tdmgyyJA5J .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmgyyJA5J .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tdmgyyJA5J .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tdmgyyJA5J .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tdmgyyJA5J .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tdmgyyJA5J .carousel-indicators li.active,
-.cid-tdmgyyJA5J .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tdmgyyJA5J .carousel-indicators li::after,
-.cid-tdmgyyJA5J .carousel-indicators li::before {
-  content: none;
-}
-.cid-tdmgyyJA5J .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tdmgyyJA5J .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tdmgyyJA5J .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmgyyJA5J .carousel-indicators {
-    display: none;
-  }
-}
-.cid-tdmgyyJA5J .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tdmgyyJA5J .carousel-inner > .active {
-  display: block;
-}
-.cid-tdmgyyJA5J .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmgyyJA5J .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tdmgyyJA5J .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tdmgyyJA5J .carousel-control,
-  .cid-tdmgyyJA5J .carousel-indicators,
-  .cid-tdmgyyJA5J .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmgyyJA5J .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tdmgyyJA5J .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tdmgyyJA5J .carousel-indicators .active,
-.cid-tdmgyyJA5J .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tdmgyyJA5J .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tdmgyyJA5J .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tdmgyyJA5J .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-tdmgyyJA5J .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tdmgyyJA5J .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tdmgyyJA5J .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tdmgyyJA5J .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tdmgyyJA5J .carousel {
-  width: 100%;
-}
-.cid-tdmgyyJA5J .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tdmgyyJA5J .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tdmgyyJA5J .modal.fade .modal-dialog,
-.cid-tdmgyyJA5J .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tdmgyyJA5J .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tdmgyyJA5J H6 {
-  text-align: center;
-}
-.cid-tdmgyyJA5J H3 {
   color: #ffffff;
 }
 .cid-tdmoASUhCB {
