--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1661,7 +1661,7 @@ a {
 .cid-tdmplaCsPO {
   padding-top: 3rem;
   padding-bottom: 1rem;
-  background-color: #e43f3f;
+  background-color: #ffb5b5;
 }
 .cid-tdmplaCsPO .mbr-fallback-image.disabled {
   display: none;
