--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2133,7 +2133,7 @@ a {
 .cid-tdmplaCsPO {
   padding-top: 3rem;
   padding-bottom: 1rem;
-  background-color: #931557;
+  background-color: #ff8a8a;
 }
 .cid-tdmplaCsPO .mbr-fallback-image.disabled {
   display: none;
@@ -2404,7 +2404,7 @@ a {
 .cid-tdmerf4UZB {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-color: #cf1111;
+  background-color: #7e0808;
 }
 .cid-tdmerf4UZB .mbr-fallback-image.disabled {
   display: none;
