--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1223,6 +1223,8 @@ a {
   background-image: url("../../../assets/images/background-1-1920x1080.jpg");
 }
 .cid-te15jDY1yK {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #e2e2e2;
 }
 .cid-te15jDY1yK .mbr-fallback-image.disabled {
@@ -1246,6 +1248,34 @@ a {
   flex-direction: row-reverse;
 }
 .cid-te15jDY1yK img {
+  width: 100%;
+}
+.cid-te1AIJjq0Z {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #e2e2e2;
+}
+.cid-te1AIJjq0Z .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-te1AIJjq0Z .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-te1AIJjq0Z .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-te1AIJjq0Z .row {
+  flex-direction: row-reverse;
+}
+.cid-te1AIJjq0Z img {
   width: 100%;
 }
 .cid-tdmoASUhCB {
@@ -3431,7 +3461,7 @@ a {
   }
 }
 .cid-te1bDXIlw7 {
-  padding-top: 1rem;
+  padding-top: 3rem;
   padding-bottom: 6rem;
   background-image: url("../../../assets/images/background-3-1920x1080.jpg");
 }
