--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1253,32 +1253,32 @@ a {
 .cid-te6Qh0vDl8 {
   padding-top: 3rem;
   padding-bottom: 4rem;
-  background-color: #4829ab;
+  background-color: #000000;
 }
 @media (min-width: 992px) {
   .cid-te6Qh0vDl8 .carousel {
-    min-height: 400px;
+    min-height: 600px;
   }
   .cid-te6Qh0vDl8 .carousel img {
-    max-height: 400px;
+    max-height: 600px;
     object-fit: contain;
   }
 }
 @media (max-width: 991px) and (min-width: 768px) {
   .cid-te6Qh0vDl8 .carousel {
-    min-height: 260px;
+    min-height: 390px;
   }
   .cid-te6Qh0vDl8 .carousel img {
-    max-height: 260px;
+    max-height: 390px;
     object-fit: contain;
   }
 }
 @media (max-width: 767px) {
   .cid-te6Qh0vDl8 .carousel {
-    min-height: 220px;
+    min-height: 330px;
   }
   .cid-te6Qh0vDl8 .carousel img {
-    max-height: 220px;
+    max-height: 330px;
     object-fit: contain;
   }
   .cid-te6Qh0vDl8 .container .carousel-control {
@@ -1403,70 +1403,70 @@ a {
 .cid-te1AIJjq0Z img {
   width: 100%;
 }
-.cid-te6Si2Q6Ts {
+.cid-te7qaOPAGw {
   padding-top: 3rem;
   padding-bottom: 4rem;
-  background-color: #4829ab;
+  background-color: #000000;
 }
 @media (min-width: 992px) {
-  .cid-te6Si2Q6Ts .carousel {
-    min-height: 400px;
+  .cid-te7qaOPAGw .carousel {
+    min-height: 600px;
   }
-  .cid-te6Si2Q6Ts .carousel img {
-    max-height: 400px;
+  .cid-te7qaOPAGw .carousel img {
+    max-height: 600px;
     object-fit: contain;
   }
 }
 @media (max-width: 991px) and (min-width: 768px) {
-  .cid-te6Si2Q6Ts .carousel {
-    min-height: 260px;
+  .cid-te7qaOPAGw .carousel {
+    min-height: 390px;
   }
-  .cid-te6Si2Q6Ts .carousel img {
-    max-height: 260px;
+  .cid-te7qaOPAGw .carousel img {
+    max-height: 390px;
     object-fit: contain;
   }
 }
 @media (max-width: 767px) {
-  .cid-te6Si2Q6Ts .carousel {
-    min-height: 220px;
+  .cid-te7qaOPAGw .carousel {
+    min-height: 330px;
   }
-  .cid-te6Si2Q6Ts .carousel img {
-    max-height: 220px;
+  .cid-te7qaOPAGw .carousel img {
+    max-height: 330px;
     object-fit: contain;
   }
-  .cid-te6Si2Q6Ts .container .carousel-control {
+  .cid-te7qaOPAGw .container .carousel-control {
     margin-bottom: 0;
   }
-  .cid-te6Si2Q6Ts .content-slider-wrap {
+  .cid-te7qaOPAGw .content-slider-wrap {
     width: 100% !important;
   }
 }
-.cid-te6Si2Q6Ts .carousel,
-.cid-te6Si2Q6Ts .carousel-inner {
+.cid-te7qaOPAGw .carousel,
+.cid-te7qaOPAGw .carousel-inner {
   display: flex;
   align-items: center;
 }
-.cid-te6Si2Q6Ts .item-wrapper {
+.cid-te7qaOPAGw .item-wrapper {
   width: 100%;
 }
-.cid-te6Si2Q6Ts .carousel-caption {
+.cid-te7qaOPAGw .carousel-caption {
   bottom: 40px;
 }
-.cid-te6Si2Q6Ts .carousel-control:hover {
+.cid-te7qaOPAGw .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-te6Si2Q6Ts .mobi-mbri-arrow-next {
+.cid-te7qaOPAGw .mobi-mbri-arrow-next {
   margin-left: 5px;
 }
-.cid-te6Si2Q6Ts .mobi-mbri-arrow-prev {
+.cid-te7qaOPAGw .mobi-mbri-arrow-prev {
   margin-right: 5px;
 }
-.cid-te6Si2Q6Ts .container .carousel-indicators {
+.cid-te7qaOPAGw .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-te6Si2Q6Ts .carousel-control {
+.cid-te7qaOPAGw .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -1477,26 +1477,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-te6Si2Q6Ts .carousel-control.carousel-control-prev {
+.cid-te7qaOPAGw .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-te6Si2Q6Ts .carousel-control.carousel-control-next {
+.cid-te7qaOPAGw .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-te6Si2Q6Ts .carousel-control {
+  .cid-te7qaOPAGw .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-te6Si2Q6Ts .carousel-indicators {
+.cid-te7qaOPAGw .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-te6Si2Q6Ts .carousel-indicators li {
+.cid-te7qaOPAGw .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -1508,15 +1508,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-te6Si2Q6Ts .carousel-indicators li.active,
-.cid-te6Si2Q6Ts .carousel-indicators li:hover {
+.cid-te7qaOPAGw .carousel-indicators li.active,
+.cid-te7qaOPAGw .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-te6Si2Q6Ts .carousel-indicators li::after,
-.cid-te6Si2Q6Ts .carousel-indicators li::before {
+.cid-te7qaOPAGw .carousel-indicators li::after,
+.cid-te7qaOPAGw .carousel-indicators li::before {
   content: none;
 }
-.cid-te6Si2Q6Ts .carousel-indicators.ie-fix {
+.cid-te7qaOPAGw .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -1524,7 +1524,7 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-te6Si2Q6Ts .carousel-indicators {
+  .cid-te7qaOPAGw .carousel-indicators {
     display: none !important;
   }
 }
