--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1083,7 +1083,7 @@ a {
 .cid-tdgQs7wgRD {
   padding-top: 1rem;
   padding-bottom: 2rem;
-  background-color: #4829ab;
+  background-color: #ba9700;
 }
 @media (min-width: 992px) {
   .cid-tdgQs7wgRD .carousel {
@@ -2168,7 +2168,7 @@ a {
 .cid-tdmplaCsPO {
   padding-top: 3rem;
   padding-bottom: 1rem;
-  background-color: #ff8a8a;
+  background-color: #ba9700;
 }
 .cid-tdmplaCsPO .mbr-fallback-image.disabled {
   display: none;
@@ -2439,7 +2439,7 @@ a {
 .cid-tdmerf4UZB {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-color: #7e0808;
+  background-color: #4829ab;
 }
 .cid-tdmerf4UZB .mbr-fallback-image.disabled {
   display: none;
@@ -3073,9 +3073,60 @@ a {
     left: -1rem;
   }
 }
+.cid-terPpUKtqY {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-terPpUKtqY img,
+.cid-terPpUKtqY .item-img {
+  width: 100%;
+}
+.cid-terPpUKtqY .item:focus,
+.cid-terPpUKtqY span:focus {
+  outline: none;
+}
+.cid-terPpUKtqY .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-terPpUKtqY .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-terPpUKtqY .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-terPpUKtqY .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-terPpUKtqY .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-terPpUKtqY .mbr-section-title {
+  color: #ffffff;
+}
+.cid-terPpUKtqY .mbr-text,
+.cid-terPpUKtqY .mbr-section-btn {
+  text-align: left;
+}
+.cid-terPpUKtqY .item-title {
+  text-align: left;
+}
+.cid-terPpUKtqY .item-subtitle {
+  text-align: left;
+}
 .cid-tdmhR8NHZA {
-  padding-top: 10rem;
-  padding-bottom: 6rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 .cid-tdmhR8NHZA .mbr-fallback-image.disabled {
   display: none;
