--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1043,21 +1043,21 @@ a {
   }
 }
 .cid-teKorV6XuI {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-top: 0;
+  padding-bottom: 0;
   background-color: #fafafa;
 }
 .cid-teKorV6XuI .carousel {
-  height: 800px;
-}
-.cid-teKorV6XuI .carousel img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
-.cid-teKorV6XuI .carousel-item,
 .cid-teKorV6XuI .carousel-inner {
-  height: 100%;
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+.cid-teKorV6XuI .carousel-item img {
+  height: 100vh;
+  object-fit: cover;
 }
 .cid-teKorV6XuI .carousel-caption {
   bottom: 40px;
