--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4709,7 +4709,7 @@ a {
 .cid-teKNqqyCD0 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-teKNqqyCD0 img,
 .cid-teKNqqyCD0 .item-img {
