--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4727,7 +4727,7 @@ a {
 .cid-teKNqqyCD0 .item-wrapper {
   position: unset;
   border-radius: 4px;
-  background: #fafafa;
+  background: #000000;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
